--- a/api/package.json
+++ b/api/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon -e ts,js --exec \"tsx ./src/index.ts\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "nodemon": "^3.1.7",
+    "tsx": "^4.19.1",
     "typescript": "^5.6.2"
   }
 }
