--- a/api/package.json
+++ b/api/package.json
@@ -14,5 +14,10 @@
     "nodemon": "^3.1.7",
     "tsx": "^4.19.1",
     "typescript": "^5.6.2"
+  },
+  "dependencies": {
+    "@coral-xyz/borsh": "^0.30.1",
+    "@solana-developers/helpers": "^2.5.6",
+    "@solana/web3.js": "^1.95.3"
   }
 }
