--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
     "nodemon": "^3.1.7",
     "tsx": "^4.19.1",
     "typescript": "^5.6.2"
@@ -18,6 +20,8 @@
   "dependencies": {
     "@coral-xyz/borsh": "^0.30.1",
     "@solana-developers/helpers": "^2.5.6",
-    "@solana/web3.js": "^1.95.3"
+    "@solana/web3.js": "^1.95.3",
+    "cors": "^2.8.5",
+    "express": "^4.21.0"
   }
 }
