--- a/api/package.json
+++ b/api/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "nodemon -e ts,js --exec \"tsx ./src/index.ts\"",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -21,6 +22,7 @@
     "@coral-xyz/borsh": "^0.30.1",
     "@solana-developers/helpers": "^2.5.6",
     "@solana/web3.js": "^1.95.3",
+    "bs58": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^4.21.0"
   }
