--- a/user_info_program/Cargo.toml
+++ b/user_info_program/Cargo.toml
@@ -14,4 +14,6 @@ name = "user_info_program"
 borsh = "0.10.3"
 solana-program = "2"
 thiserror = "1.0.64"
-
+drift = { git = "https://github.com/drift-labs/protocol-v2.git", rev = "v2.92.0", features = ["cpi", "mainnet-beta"]}
+rustversion = "1.0.17" 
+proc-macro2 = "=1.0.79"
