--- a/user_info_program/Cargo.toml
+++ b/user_info_program/Cargo.toml
@@ -13,7 +13,5 @@ name = "user_info_program"
 [dependencies]
 borsh = "0.10.3"
 solana-program = "2"
+drift = { workspace = true }
 thiserror = "1.0.64"
-drift = { git = "https://github.com/drift-labs/protocol-v2.git", rev = "v2.92.0", features = ["cpi", "mainnet-beta"]}
-rustversion = "1.0.17" 
-proc-macro2 = "=1.0.79"
