--- a/cargo.toml
+++ b/cargo.toml
@@ -12,20 +12,34 @@ incremental = false
 codegen-units = 1
 
 [workspace.dependencies]
-anchor-lang = { version = "0.30.1", features = ["init-if-needed", "interface-instructions"] }
-anchor-spl = { version = "0.30.1", features = ["stake"] }
-solana-program = "=1.18.23"
+borsh = "^1.5"
+bs58 = ">=0.5"
+bytemuck = "^1.16"
+clap = "4.5.14"
+env_logger = "0.11.5"
+heck = "0.5.0"
+itertools = "^0.13"
+lazy_static = "^1.5"
+log = "0.4.22"
+log-panics = "^2.1"
+num-derive = "0.4.2"
+num-traits = "^0.2"
+prettyplease = "0.2.20"
+proc-macro2 = "^1.0"
+quote = "^1.0"
+rand = "^0.8"
+serde = "^1"
+serde_json = "^1"
+sha2 = "^0.10"
+solana-cli-config = "^2.0"
+solana-client = "^2.0"
+solana-program = "^2.0"
+solana-sdk = "^2.0"
+syn = "^2.0"
+thiserror = "^1.0"
+tokio = "^1"
+toml = "0.8.19"
+void = "^1.0"
 
-spl-transfer-hook-interface = "0.6.5"
-spl-tlv-account-resolution = "0.6.5"
-
-spl-stake-pool = { version = "1.0.0", features = ["no-entrypoint"] }
-anchor-gen = "0.3.1"
-pyth-sdk-solana = "0.10.1"
-strum = { version = "0.26", features = ["derive"] }
-phf = { version = "0.11", features = ["macros"] }
-
-drift = { path = "./deps/drift" }
-marinade = { package = "marinade-finance", git = "https://github.com/glamsystems/liquid-staking-program", branch = "anchor-0.30.1", features = [
-    "cpi",
-] }
+# workspace members
+drift_interface = { path = "./deps/drift/drift_interface" }
