--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon -e ts,js --exec \"tsx ./src/index.ts\"",
+    "local": "nodemon -e ts,js --exec \"tsx ./src/index-local.ts\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -24,6 +25,7 @@
     "@solana/web3.js": "^1.95.3",
     "bs58": "^6.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0"
   }
 }
