--- a/user_info_program/Cargo.toml
+++ b/user_info_program/Cargo.toml
@@ -13,5 +13,5 @@ name = "user_info_program"
 [dependencies]
 borsh = "0.10.3"
 solana-program = "2"
-drift_interface = { workspace = true }
+# drift_interface = { workspace = true }
 thiserror = "1.0.64"
