--- a/vault-program/Cargo.toml
+++ b/vault-program/Cargo.toml
@@ -11,7 +11,8 @@ crate-type = ["cdylib", "lib"]
 name = "vault_program"
 
 [dependencies]
-borsh = "0.10.3"
+borsh = "1.5.1"
+borsh-derive = "1.5.1"
 solana-program = "2"
 # drift_interface = { workspace = true }
-thiserror = "1.0.64"
+thiserror = "1.0.65"
