--- a/vault-program/Cargo.toml
+++ b/vault-program/Cargo.toml
@@ -11,8 +11,8 @@ crate-type = ["cdylib", "lib"]
 name = "vault_program"
 
 [dependencies]
+solana-program = "^1.16"
 borsh = "1.5.1"
 borsh-derive = "1.5.1"
-solana-program = "2"
-# drift_interface = { workspace = true }
+drift_interface = { workspace = true }
 thiserror = "1.0.65"
