--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@coral-xyz/borsh": "^0.30.1",
+    "@drift-labs/sdk": "2.97.0-beta.29",
     "@solana-developers/helpers": "^2.5.6",
     "@solana/web3.js": "^1.95.3",
     "bs58": "^6.0.0",
