--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,16 +1,13 @@
 {
-  "compilerOptions": {
-    "target": "ESNext",
-    "module": "ESNext",
-    "moduleResolution": "bundler",
-    "outDir": "./dist",
-    "strict": true,
-    "esModuleInterop": true,
-    "sourceMap": true,
-    "inlineSources": true,
-    "sourceRoot": "/"
-  },
-  "exclude": [
-    "node_modules"
-  ]
+	"compilerOptions": {
+		"module": "commonjs",
+		"target": "es2019",
+		"esModuleInterop": true,
+		"preserveConstEnums": true,
+		"sourceMap": true,
+		"resolveJsonModule": true,
+		"skipLibCheck": true,
+	},
+	"include": ["src"],
+	"exclude": ["node_modules", "tests"]
 }
