--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
         "lint": "eslint . --ext ts --quiet",
         "lint:fix": "eslint . --ext ts --fix",
         "prepare": "husky install",
-        "update-types": "cp target/types/drift_vaults.ts ts/sdk/src/types/drift_vaults.ts && prettier --write ts/sdk/src/types/drift_vaults.ts",
-        "update-idl": "cp target/idl/drift_vaults.json ts/sdk/src/idl/drift_vaults.json",
         "update-pyth": "cp deps/pyth.json target/idl/pyth.json",
         "update-drift": "cp deps/drift.json target/idl/drift.json",
-        "anchor-tests": "yarn update-types && yarn update-idl && yarn update-drift && yarn update-pyth && yarn update-drift && yarn update-pyth && yarn run ts-mocha -p ./tsconfig.json -t 1000000 --exit tests/**/*.ts",
+        "anchor-tests": "yarn update-drift && yarn update-pyth && yarn update-drift && yarn update-pyth && yarn run ts-mocha -p ./tsconfig.json -t 1000000 --exit tests/**/*.ts",
         "anchor-tests:vaults": "yarn anchor-tests -g TestDriftVaults",
         "anchor-tests:protocol": "yarn anchor-tests -g TestProtocolVaults",
         "anchor-tests:tokenize": "yarn anchor-tests -g TestTokenizedDriftVaults",
