--- a/deps/drift/drift_interface/Cargo.toml
+++ b/deps/drift/drift_interface/Cargo.toml
@@ -17,7 +17,7 @@ optional = true
 version = "^1.0"
 
 [dependencies.solana-program]
-version = "^2"
+version = "1.18"
 
 [dependencies.thiserror]
 version = "^1.0"
