--- a/vault-program/Cargo.toml
+++ b/vault-program/Cargo.toml
@@ -11,9 +11,9 @@ crate-type = ["cdylib", "lib"]
 name = "vault_program"
 
 [dependencies]
-solana-program = "^2"
+solana-program = "1.18"
 borsh = "1.5.1"
 borsh-derive = "1.5.1"
 drift_interface = { workspace = true }
 thiserror = "1.0.65"
-spl-token = "7.0.0"
+spl-token = { version = "5", features = ["no-entrypoint"] }
