--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
         "prepare": "husky install",
         "update-pyth": "cp deps/pyth.json target/idl/pyth.json",
         "update-drift": "cp deps/drift.json target/idl/drift.json",
-        "local-setup": "tsx tests/local-setup.ts",
-        "anchor-tests": "yarn update-drift && yarn update-pyth && yarn update-drift && yarn update-pyth && yarn run ts-mocha -p ./tsconfig.json -t 1000000 --exit tests/**/*.ts",
-        "anchor-tests:vaults": "yarn anchor-tests -g TestDriftVaults",
-        "anchor-tests:protocol": "yarn anchor-tests -g TestProtocolVaults",
-        "anchor-tests:tokenize": "yarn anchor-tests -g TestTokenizedDriftVaults",
-        "anchor-tests:if-stake": "yarn anchor-tests -g TestInsuranceFundStake"
+        "local-setup": "npm run update-drift && npm run update-pyth && npm run update-drift && npm run update-pyth &&  nodemon --watch 'tests/**/*.ts' --exec 'tsx tests/local-setup.ts'",
+        "anchor-tests": "npm run update-drift && npm run update-pyth && npm run update-drift && npm run update-pyth && npm run run ts-mocha -p ./tsconfig.json -t 1000000 --exit tests/**/*.ts",
+        "anchor-tests:vaults": "npm run anchor-tests -g TestDriftVaults",
+        "anchor-tests:protocol": "npm run anchor-tests -g TestProtocolVaults",
+        "anchor-tests:tokenize": "npm run anchor-tests -g TestTokenizedDriftVaults",
+        "anchor-tests:if-stake": "npm run anchor-tests -g TestInsuranceFundStake"
     },
     "devDependencies": {
         "@coral-xyz/anchor": "0.28.0",
@@ -30,6 +30,7 @@
         "eslint-plugin-prettier": "^3.4.0",
         "husky": "^8.0.0",
         "mocha": "^9.0.3",
+        "nodemon": "^3.1.7",
         "prettier": "^2.6.2",
         "ts-mocha": "^10.0.0",
         "ts-node": "^10.9.2",
