--- a/api/package.json
+++ b/api/package.json
@@ -29,6 +29,7 @@
     "bs58": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "promise-retry": "^2.0.1"
   }
 }
