--- a/cargo.toml
+++ b/cargo.toml
@@ -1,5 +1,8 @@
 [workspace]
-members = ["vault-program"]
+members = [
+    "vault-program",
+    "deps/drift/drift_interface",
+    ]
 resolver = "2"
 
 [profile.release]
@@ -12,6 +15,4 @@ incremental = false
 codegen-units = 1
 
 [workspace.dependencies]
-
-# workspace members
 drift_interface = { path = "./deps/drift/drift_interface" }
