--- a/vault-program/Cargo.toml
+++ b/vault-program/Cargo.toml
@@ -11,9 +11,10 @@ crate-type = ["cdylib", "lib"]
 name = "vault_program"
 
 [dependencies]
-solana-program = "1.18.26"
-borsh = "1.5.1"
-borsh-derive = "1.5.1"
+solana-program = "<=1.16"
+spl-token = { version = "3.0.0" , features = [ "no-entrypoint" ]}
+borsh = "^0.10"
+borsh-derive = "^0.10"
 drift_interface = { workspace = true }
 thiserror = "1.0.65"
-spl-token = { version = "4.0.3", features = ["no-entrypoint"] }
+
