--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -14,6 +14,9 @@ name = "vault_program"
 solana-program = "<=1.16"
 spl-token = { version = "3.0.0" , features = [ "no-entrypoint" ]}
 borsh = "^0.10"
+num-derive = "^0.3"
+num-traits = "^0.2"
+serde = {version = "^1.0", optional = true }
 drift_interface = { workspace = true }
 thiserror = "1.0.65"
 
