--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -18,4 +18,4 @@ num-derive = "^0.3"
 num-traits = "^0.2"
 serde = {version = "^1.0", optional = true }
 thiserror = "1.0.65"
-
+bytemuck = { version = "1.4.0" }
