--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -17,6 +17,7 @@ borsh = "^0.10"
 serde = {version = "^1.0", optional = true }
 thiserror = "1.0.65"
 bytemuck = { version = "1.4.0" }
+arrayref = "0.3.6"
 
 anchor-lang = "0.29.0"
 anchor-spl = { version = "0.29.0", features = ["metadata"] }
