--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -14,7 +14,8 @@ name = "vault_program"
 solana-program = "1.16"
 spl-token = { version = "3.0.0" , features = [ "no-entrypoint" ]}
 borsh = "^0.10"
-serde = {version = "^1.0", optional = true }
+serde = {version = "^1.0" }
+serde_json = "1.0"
 thiserror = "1.0.65"
 bytemuck = { version = "1.4.0" }
 arrayref = "0.3.6"
